--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -23,4 +23,4 @@ jobs:
       - name: Run lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v1.64
+          version: latest
